[package]
name = "rolex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
chrono = "0.4.31"
reqwest = "0.11.22"
serde = "1.0.189"
serde_derive = "1.0.189"
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
url = "2.4.1"
